# tic-tac-toe

./: .gitignore  README.md  index.html  script.js
css/: style.css
server/: main.py  requirements.txt  server_db.db  utils.py
wasm/minimax-algo-lib/: Cargo.toml  script.js
wasm/minimax-algo-lib/src/: game.rs  lib.rs
www/: index.html  package-lock.json  package.json
www/src/: App.vue  socket.ts  store.ts
www/src/game-components/: Game.vue  Login.vue  PlayerSelect.vue
