[package]
name = "minimax-algo-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
serde-wasm-bindgen = "0.5.0"

wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'DomTokenList',
  'EventListener',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'MouseEvent'
]

[dependencies.js-sys]
version = "0.3.61"